# line-in

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: .env  Cargo.toml  build.rs  lib.rs  tauri.conf.json  test.json
src-tauri/include/: wrapper.h
src-tauri/scripts/: shazam_recognize.py  visualize.py
src-tauri/src/: audio.rs  bindings.rs  call_py.rs  foo.c  foo_bindings.rs  main.rs  utils.rs
